--- a/Game.Host/Game.Host.csproj
+++ b/Game.Host/Game.Host.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.2" />
-    <PackageReference Include="Microsoft.Orleans.Server" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Orleans.OrleansZooKeeperUtils" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Server" Version="2.0.4" />
   </ItemGroup>
 
   <ItemGroup>
